--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -107,10 +107,10 @@
                 </div>
                 <div class="form-group">
                     <button type="submit" class="button" name="Review" value="ReviewAppointCandidate">
-                        Inform @Model.ApplicantDetails.Name their application has been successful
+                        Send successful decision
                     </button>
                     <p class="med-btm-margin">
-                        <button type="submit" class="button-link" name="Review" value="ReviewRejectCandidate">Reject candidate</button>
+                        <button type="submit" class="button-link" name="Review" value="ReviewRejectCandidate">Send unsuccessful decision</button>
                         <button type="submit" class="button-link" name="Review" value="ReviewSaveAndExit">Save and exit</button>
                     </p>
                 </div>
