Candidate's applications match user story and mock up

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Apprenticeship.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Apprenticeship.cshtml
@@ -24,6 +24,7 @@
     </div>
     @Html.DisplayFor(m => m.AboutYou, AboutYouViewModel.PartialView)
     @Html.DisplayFor(m => m.Education, EducationViewModel.PartialView)
+    @Html.DisplayFor(m => m.Qualifications, QualificationViewModel.PartialView)
     @Html.DisplayFor(m => m.WorkExperience, WorkExperienceViewModel.PartialView)
     @Html.DisplayFor(m => m.TrainingCourses, TrainingCourseViewModel.PartialView)
 
@@ -55,10 +56,10 @@
                 }
             }
 
-            @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus, @"Application\DisabilityStatusQuestion")
+            @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus, "Application/DisabilityStatusQuestion")
 
             @if (Model.VacancyQuestionAnswers.HasAnythingWeCanDoToSupportYourInterviewAnswer)
-                {
+            {
                 <div class="form-group">
                     <label for="question4" class="form-label">Is there anything we can do to support your interview?</label>
                     <span class="form-prepopped" id="">@Model.VacancyQuestionAnswers.AnythingWeCanDoToSupportYourInterviewAnswer</span>
