--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -52,6 +52,7 @@
         </div>
         @Html.DisplayFor(m => m.AboutYou, AboutYouViewModel.PartialView)
         @Html.DisplayFor(m => m.Education, EducationViewModel.PartialView)
+        @Html.DisplayFor(m => m.Qualifications, QualificationViewModel.PartialView)
         @Html.DisplayFor(m => m.WorkExperience, WorkExperienceViewModel.PartialView)
         @Html.DisplayFor(m => m.TrainingCourses, TrainingCourseViewModel.PartialView)
 
@@ -83,7 +84,7 @@
                     }
                 }
 
-                @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus, @"Application\DisabilityStatusQuestion")
+                @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus, "Application/DisabilityStatusQuestion")
 
                 @if (Model.VacancyQuestionAnswers.HasAnythingWeCanDoToSupportYourInterviewAnswer)
                 {
