Candidate's application matches FAA

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/AboutYou.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/AboutYou.cshtml
@@ -5,15 +5,15 @@
         About you
     </legend>
     <div class="form-group">
-        <label for="strengths" class="form-label">Provide examples of your strengths</label>
+        <label for="strengths" class="form-label">What are your main strengths?</label>
         <span class="form-prepopped" id="strengths">@Model.Strengths</span>
     </div>
     <div class="form-group">
-        <label for="improvements" class="form-label">What skills would you like to improve?</label>
+        <label for="improvements" class="form-label">What skills would you like to improve during this apprenticeship?</label>
         <span class="form-prepopped" id="improvements">@Model.Improvements</span>
     </div>
     <div class="form-group">
-        <label for="hobbies-and-interests" class="form-label">What are you hobbies and interests?</label>
+        <label for="hobbies-and-interests" class="form-label">What are your hobbies and interests?</label>
         <span class="form-prepopped" id="hobbies-and-interests">@Model.HobbiesAndInterests</span>
     </div>
 </fieldset>
