--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/Education.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/Education.cshtml
@@ -11,11 +11,11 @@
     <div class="inline-fixed">
         <p class="form-label">Years attended</p>
         <div class="form-group">
-            <label for="school-from" class="form-label">From</label>
+            <label for="school-from" class="form-hint">Started</label>
             <span class="form-prepopped" id="school-from">@Model.FromYear</span>
         </div>
         <div class="form-group">
-            <label for="school-to" class="form-label">To</label>
+            <label for="school-to" class="form-hint">Finished</label>
             <span class="form-prepopped" id="school-to">@Model.ToYear</span>
         </div>
     </div>
