--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Apprenticeship.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Apprenticeship.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SFA.Apprenticeships.Domain.Entities.Applications
+@using SFA.Apprenticeships.Web.Manage.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
 
@@ -7,64 +8,61 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
-    <div class="hgroup">
-        <h1 class="heading-xlarge med-btm-margin">Vacancy application</h1>
-        <p class="subtitle">@Model.Vacancy.Title</p>
-        <!--<p>
-            <a href="live-apprenticeship-summary.html">Apprenticeship summary</a>
-        </p>-->
+<div class="grid-wrapper">
+    <div class="grid grid-2-3">
+        <h1 class="heading-xlarge">Your application - @Model.ApplicantDetails.Name</h1>
     </div>
-    <div class="grid-wrapper">
-        <div class="grid grid-2-3">
-            @Html.DisplayFor(m => m.ApplicantDetails, ApplicantDetailsViewModel.PartialView)
-        </div>
-        <div class="grid grid-1-3">
+    <div class="grid grid-1-3">
+        <div class="page-link hide-nojs">
+            <p>
+                <a class="print-trigger" href=""><i class="fa fa-print"></i>Print this page</a>
+            </p>
         </div>
     </div>
-    @Html.DisplayFor(m => m.AboutYou, AboutYouViewModel.PartialView)
-    @Html.DisplayFor(m => m.Education, EducationViewModel.PartialView)
-    @Html.DisplayFor(m => m.Qualifications, QualificationViewModel.PartialView)
-    @Html.DisplayFor(m => m.WorkExperience, WorkExperienceViewModel.PartialView)
-    @Html.DisplayFor(m => m.TrainingCourses, TrainingCourseViewModel.PartialView)
-
-
-    @if (Model.Vacancy.HasQuestions ||
-                    Model.ApplicantDetails.DisabilityStatus.HasValue ||
-                    Model.VacancyQuestionAnswers.HasAnythingWeCanDoToSupportYourInterviewAnswer)
-    {
-        <fieldset class="fieldset-with-border">
-            @if (Model.Vacancy.HasQuestions)
-                {
-                <legend class="heading-large">
-                    Answers to employer questions
-                </legend>
-
-                if (Model.Vacancy.HasFirstQuestion)
-                {
-                    <div class="form-group">
-                        <label for="add-question1" class="form-label">@Model.Vacancy.FirstQuestion</label>
-                        <span class="form-prepopped" id="add-question1">@Model.VacancyQuestionAnswers.FirstQuestionAnswer</span>
-                    </div>
-                }
-                if (Model.Vacancy.HasSecondQuestion)
-                {
-                    <div class="form-group">
-                        <label for="add-question2" class="form-label">@Model.Vacancy.SecondQuestion</label>
-                        <span class="form-prepopped" id="add-question2">@Model.VacancyQuestionAnswers.SecondQuestionAnswer</span>
-                    </div>
-                }
-            }
-
-            @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus, "Application/DisabilityStatusQuestion")
-
-            @if (Model.VacancyQuestionAnswers.HasAnythingWeCanDoToSupportYourInterviewAnswer)
-            {
-                <div class="form-group">
-                    <label for="question4" class="form-label">Is there anything we can do to support your interview?</label>
-                    <span class="form-prepopped" id="">@Model.VacancyQuestionAnswers.AnythingWeCanDoToSupportYourInterviewAnswer</span>
-                </div>
-            }
-        </fieldset>
-    }
 </div>
+
+<div class="grid-wrapper">
+    <div class="grid grid-2-3">
+        <div class="hgroup-medium">
+            <h2 class="heading-medium" id="vacancy-title">@Model.Vacancy.Title</h2>
+            <p class="subtitle" id="vacancy-employer">@Model.Vacancy.EmployerName</p>
+        </div>
+        <p class="text" id="vacancy-summary">@Model.Vacancy.Description</p>
+    </div>
+    <div class="grid grid-1-3 para-btm-margin">
+        <p class="small-btm-margin">This is a submitted application.</p>
+        <p class="small-btm-margin">
+            Candidate applied on @Html.DisplayFor(m => m.DateApplied, "Date").
+            @if (Model.Status == ApplicationStatuses.Successful)
+            {
+                <span class="inl-block">This application was successful.</span>
+            }
+            else if (Model.Status == ApplicationStatuses.Unsuccessful)
+            {
+                <span class="inl-block">This application was unsuccessful.</span>
+            }
+            else if (Model.Status == ApplicationStatuses.ExpiredOrWithdrawn)
+            {
+                <span class="inl-block">This apprenticeship expired or was withdrawn.</span>
+            }
+        </p>
+        <p class="hide-print">
+            @Html.RouteLink("Return to candidate's dashboard", ManagementRouteNames.ViewCandidate, new { id = Model.ApplicantDetails.CandidateId }, new { @class = "return-to-my-applications" })
+        </p>
+    </div>
+</div>
+
+@Html.DisplayFor(m => m.ApplicantDetails, "ApplicantDetails")
+@Html.DisplayFor(m => m.Education, EducationViewModel.PartialView)
+@Html.DisplayFor(m => m.Qualifications, QualificationViewModel.PartialView)
+@Html.DisplayFor(m => m.WorkExperience, WorkExperienceViewModel.PartialView)
+@Html.DisplayFor(m => m.TrainingCourses, TrainingCourseViewModel.PartialView)
+@Html.DisplayFor(m => m.AboutYou, AboutYouViewModel.PartialView)
+
+<section class="section-border">
+    <h2 class="heading-large">
+        Additional questions
+    </h2>
+    @Html.DisplayFor(m => m, "Application/EmployerQuestionAnswers")
+    @Html.DisplayFor(m => m, "Application/MonitoringInformation")
+</section>
