Get with status

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -3,7 +3,7 @@
 @functions {
     private static bool VacancyIsClonable(VacancySummaryViewModel vacancy)
     {
-        return vacancy.Status != VacancyStatus.RejectedByQA;
+        return vacancy.Status != VacancyStatus.Referred;
     }
 }
 @using SFA.Apprenticeships.Domain.Entities.Raa.Vacancies
