--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
@@ -10,7 +10,7 @@
     case VacancyStatus.ReservedForQA:
         <span class="tag-pending" style="width: 110px">Submitted</span>
         break;
-    case VacancyStatus.RejectedByQA:
+    case VacancyStatus.Referred:
         <span class="tag-pending" style="width: 110px">Referred</span>
         break;
     case VacancyStatus.Live:
