--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Apprenticeship.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Apprenticeship.cshtml
@@ -27,7 +27,7 @@
             <h2 class="heading-medium" id="vacancy-title">@Model.Vacancy.Title</h2>
             <p class="subtitle" id="vacancy-employer">@Model.Vacancy.EmployerName</p>
         </div>
-        <p class="text" id="vacancy-summary">@Model.Vacancy.Description</p>
+        <p class="text" id="vacancy-summary">@Model.Vacancy.ShortDescription</p>
     </div>
     <div class="grid grid-1-3 para-btm-margin">
         <p class="small-btm-margin">This is a submitted application.</p>
