--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/EmployerQuestionAnswers.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/EmployerQuestionAnswers.cshtml
@@ -7,14 +7,14 @@
         {
             <div class="form-group">
                 <p class="form-label text">@Html.Raw(Model.Vacancy.FirstQuestion)</p>
-                <span class="form-prepopped prewrap">@Html.Raw(Model.VacancyQuestionAnswers.FirstQuestionAnswer)</span>
+                <span class="form-prepopped prewrap">@Html.Raw(Model.VacancyQuestionAnswers.FirstQuestionAnswer ?? "-")</span>
             </div>
         }
         @if (!string.IsNullOrWhiteSpace(Model.Vacancy.SecondQuestion))
         {
             <div class="form-group">
                 <p class="form-label text">@Html.Raw(Model.Vacancy.SecondQuestion)</p>
-                <span class="form-prepopped prewrap">@Html.Raw(Model.VacancyQuestionAnswers.SecondQuestionAnswer)</span>
+                <span class="form-prepopped prewrap">@Html.Raw(Model.VacancyQuestionAnswers.SecondQuestionAnswer ?? "-")</span>
             </div>
         }
     </div>
