--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -9,6 +9,7 @@
 @Html.Partial("ValidationSummary", ViewData.ModelState)
 
 <div>
+    @Html.DisplayFor(m => m, "Vacancy/VacancyPreviewHeader")
     @Html.DisplayFor(m => m, VacancyViewModel.PartialView)
 
     @if (Model.Status.IsStateReadOnly())
