--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/View.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/View.cshtml
@@ -5,5 +5,6 @@
 }
 
 <div>
+    @Html.DisplayFor(m => m, "Vacancy/VacancyPreviewHeader")
     @Html.DisplayFor(m => m, VacancyViewModel.PartialView)
 </div>
