--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
@@ -6,7 +6,7 @@
     case VacancyStatus.Draft:
         <span class="tag-draft" style="width: 110px">Draft</span>
         break;
-    case VacancyStatus.PendingQA:
+    case VacancyStatus.Submitted:
     case VacancyStatus.ReservedForQA:
         <span class="tag-pending" style="width: 110px">Submitted</span>
         break;
