Fixed multi location

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
@@ -13,6 +13,7 @@
 
 @Html.HiddenFor(m => m.Ukprn)
 @Html.HiddenFor(m => m.EmployerId)
+@Html.HiddenFor(m => m.EmployerEdsUrn)
 @Html.HiddenFor(m => m.ProviderSiteId)
 @Html.HiddenFor(m => m.VacancyGuid)
 @Html.HiddenFor(m => m.ComeFromPreview)
