Fix FAA following SQL migration. Index traineeships

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/EmployerQuestionAnswers.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/EmployerQuestionAnswers.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.ApplicationViewModel
 
 @if (Model != null && (!string.IsNullOrWhiteSpace(Model.Vacancy.FirstQuestion) || !string.IsNullOrWhiteSpace(Model.Vacancy.SecondQuestion)))
 {
