--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/MonitoringInformation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/MonitoringInformation.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.ApplicationViewModel
 
 @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus, "Application/DisabilityStatusQuestion")
 
