--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Apprenticeship.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Apprenticeship.cshtml
@@ -62,7 +62,7 @@
         </p>
         <p class="hide-print">
             @Html.RouteLink("Return to candidate's dashboard", ManagementRouteNames.ViewCandidate, new {id = Model.ApplicantDetails.CandidateId}, new {@class = "inl-block" })
-            @Html.RouteLink("View vacancy", ManagementRouteNames.ViewCandidateApprenticeshipVacancy, new { vacancyId = Model.Vacancy.VacancyId, applicationId = Model.ApplicationSelection.ApplicationId }, new { @class = "inl-block" })
+            @Html.RouteLink("View vacancy", ManagementRouteNames.ViewCandidateApprenticeshipVacancy, new { vacancyId = Model.Vacancy.vacancyReferenceNumber, applicationId = Model.ApplicationSelection.ApplicationId }, new { @class = "inl-block" })
         </p>
     </div>
 </div>
