--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/_Apply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/_Apply.cshtml
@@ -13,9 +13,12 @@
         <span>Candidate applied on @Html.DisplayFor(m => m.Application.DateApplied, "Date").</span>
     }
 </p>
-<p class="hide-print">
-    @Html.RouteLink("View candidate's application", Model.Vacancy.VacancyType == VacancyType.Apprenticeship ? ManagementRouteNames.ViewCandidateApprenticeshipApplication : ManagementRouteNames.ViewCandidateTraineeshipVacancy, new {applicationId = Model.Application.ApplicationSelection.ApplicationId}, new {@class = "inl-block"})
-</p>
+@if (@Model.Vacancy.Status != VacancyStatus.Closed)
+{
+    <p class="hide-print">
+        @Html.RouteLink("View candidate's application", Model.Vacancy.VacancyType == VacancyType.Apprenticeship ? ManagementRouteNames.ViewCandidateApprenticeshipApplication : ManagementRouteNames.ViewCandidateTraineeshipApplication, new {applicationId = Model.Application.ApplicationSelection.ApplicationId}, new {@class = "inl-block"})
+    </p>
+}
 @Html.RouteLink("Return to candidate's dashboard", ManagementRouteNames.ViewCandidate, new { id = Model.Application.ApplicantDetails.CandidateId }, new { @class = "inl-block" })
 <p id="vacancy-closing-date" class="copy-16">
     @(Model.Vacancy.Status == VacancyStatus.Closed ? "Closed on:" : "Closing date:") @Model.Vacancy.FurtherVacancyDetailsViewModel.VacancyDatesViewModel.ClosingDate.Date.ToFriendlyClosingToday()
